..F....... [ZBX-12940] fixed content does not fit dialog window
git-svn-id: svn://svn.zabbix.com/trunk@78112 97f52cf1-0a1b-0410-bd0e-c28be96e8082

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -3303,6 +3303,7 @@ $form-icon-btn: (
 		.overlay-dialogue-body {
 			overflow: auto;
 			overflow-x: hidden;
+			width: 100%;
 			max-height: calc(100vh - 190px);
 			max-width: inherit;
 			margin: 0 0 10px 0;
